<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/msiaj"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/but_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/_return"
            android:textColor="#563" />

        <TextView
            android:id="@+id/edit_note_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/_BTitlke"
            android:textSize="25sp" />

        <Button
            android:id="@+id/but_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/_save"
            android:textColor="#563" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="top|center"
        android:hint="@string/_Nr"
        android:background="@null"
        android:padding="50dp" />

</LinearLayout>